--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <header>
-        <h1>Compartilhada</h1>
+
+        <h1>Compartilhada
+        </h1>
+
+   <p> Bhianca Muldenberger Pinto, Minha cor favorita é azul e minha comida favorita é macarrão com carne moida e creme de leite.</p> 
     </header>
 </body>
 </html>
