--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <h1>Compartilhada</h1>
+        <p>Meu nome é Giovanna Caldeira, minha cor favorita é rosa e minha comida favorita x-salada
     </header>
 </body>
 </html>
