--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <header>
         <h1>Compartilhada</h1>
+
+     <p>meu nome é Cauã jun Keshino, minha cor favorita é verde e minha comida favorita é arroz batata frita bife feijao pão de alho e maionese</p>
     </header>
 </body>
 </html>
