--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Compartilhada</h1>
-        <p>meu nome é ana carolina, minha cor favorita é azul e gosto de sushi.</p>
+        <p>meu nome é ana Carolina, minha cor favorita é azul e gosto de sushi.</p>
     </header>
 </body>
 </html>
