--- a/index.html
+++ b/index.html
@@ -8,16 +8,8 @@
 </head>
 <body>
     <header>
-<<<<<<< HEAD
         <h1>Compartilhada</h1>
-        <p>meu nome é ana Carolina, minha cor favorita é azul e gosto de sushi.</p>
-=======
-
-        <h1>Compartilhada
-        </h1>
-
-   <p> Bhianca Muldenberger Pinto, Minha cor favorita é azul e minha comida favorita é macarrão com carne moida e creme de leite.</p> 
->>>>>>> d8fedcb514e2d1e78321ac4d63ac785a69745249
+        <p>meu nome é ana arolina, minha cor favorita é azul e gosto de sushi.</p>
     </header>
 </body>
 </html>
