--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <h1>Compartilhada</h1>
+        <p>Meu nome é Henrique duarte dos Santos, minha cor favorita é azul e minha fruta favorita é banana</p>
     </header>
 </body>
 </html>
