--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <header>
         <h1>Compartilhada</h1>
-        <p>Meu nome é Giovanna caldeira, minha cor favorita é rosa e minha comida favorita x-salada
+        <p>Meu nome e kauã moura de souza minha cor favorita e preta e minha comida favorita e amendoim </p>
+        <p>Meu nome e Maria luyza mendes da silva leal minha cor favorita e vermelho e minha comida favorita e pao de queijo</p>
     </header>
 </body>
 </html>
