--- a/index.html
+++ b/index.html
@@ -12,10 +12,5 @@
         <h1>Compartilhada
         </h1>
 
-        <p> Bhianca Muldenberger Pinto, Minha cor favorita é azul e minha comida favorita é macarrão com carne moida e creme de leite.</p> 
-        <p> meu nome é thaissa costa alves, gosto de roxo e minha comida favorita é estrogonofe.</p>
-        
-        <p>Meu nome é Giovanna caldeira, minha cor favorita é rosa e minha comida favorita x-salada.</p>
-        <p>meu nome é iasmin,minha cor favorita é branco e minha comida favorita é aaroz com feijão,bife,salada e batata frita</p>
-</body>
+        <p>meu nome é ana luiza,minha cor favorita é roxo e minha comida favorita é aaroz com feijão,bife,salada e batata frita</p>
 </html>
