--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <h1>Compartilhada</h1>
+        <p>eu sou o joao francisco, minha cor favorita e azul e miha fruta favorita e goiaba</p> 
     </header>
 </body>
 </html>
